--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -63,6 +63,7 @@ ktorJson = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "
 ktorCIO = { module = "io.ktor:ktor-client-cio", version.ref = "ktor" }
 ktorWebSockets = { module = "io.ktor:ktor-client-websockets", version.ref = "ktor" }
 ktorLogging = { module = "io.ktor:ktor-client-logging", version.ref = "ktor" }
+ktorResources = { module = "io.ktor:ktor-client-resources", version.ref = "ktor" }
 
 #hilt
 hilt = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
@@ -83,7 +84,6 @@ androidCompioseUiTestManifest = { module = "androidx.compose.ui:ui-test-manifest
 androidApplication = { id = "com.android.application", version.ref = "gradleplugin" }
 androidLibrary = { id = "com.android.library", version.ref = "gradleplugin" }
 kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-kotlinKapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 kotlinSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
@@ -91,6 +91,6 @@ ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 [bundles]
 compose = ["composeUi", "composePreview", "composeMaterial3", "composeMaterialIcons", "composeMaterialIconsExtended", "activityCompose", "lifecycleViewModelCompose"]
 accompanist = ["accompanistUiController"]
-ktor = ["ktorCIO", "ktorJson", "ktorWebSockets", "ktorLogging", "ktorContentNegotioation"]
+ktor = ["ktorCIO", "ktorJson", "ktorWebSockets", "ktorLogging", "ktorContentNegotioation", "ktorResources"]
 unitTest = ["androidTestJunit4", "kotlinTest", "kotlinJunitTest"]
 androidTest = ["androidTestJunit4", "androidCompioseUiTestJunit4", "androidTestEspressoCore", "kotlinTest", "kotlinJunitTest"]
