--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -28,7 +28,6 @@ ksp = "1.9.10-1.0.13"
 junitTest = "4.13.2"
 androidTestJUnit4 = "1.1.5"
 androidTestEspresso = "3.5.1"
-appcompat = "1.6.1"
 
 [libraries]
 #BoM
@@ -64,7 +63,6 @@ ktorJson = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "
 ktorCIO = { module = "io.ktor:ktor-client-cio", version.ref = "ktor" }
 ktorWebSockets = { module = "io.ktor:ktor-client-websockets", version.ref = "ktor" }
 ktorLogging = { module = "io.ktor:ktor-client-logging", version.ref = "ktor" }
-ktorResources = { module = "io.ktor:ktor-client-resources", version.ref = "ktor" }
 
 #hilt
 hilt = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
@@ -80,12 +78,12 @@ androidTestEspressoCore = { module = "androidx.test.espresso:espresso-core", ver
 androidTestJunit4 = { module = "androidx.test.ext:junit", version.ref = "androidTestJUnit4" }
 androidCompioseUiTestJunit4 = { module = "androidx.compose.ui:ui-test-junit4" }
 androidCompioseUiTestManifest = { module = "androidx.compose.ui:ui-test-manifest" }
-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "gradleplugin" }
 androidLibrary = { id = "com.android.library", version.ref = "gradleplugin" }
 kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+kotlinKapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 kotlinSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
@@ -93,6 +91,6 @@ ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 [bundles]
 compose = ["composeUi", "composePreview", "composeMaterial3", "composeMaterialIcons", "composeMaterialIconsExtended", "activityCompose", "lifecycleViewModelCompose"]
 accompanist = ["accompanistUiController"]
-ktor = ["ktorCIO", "ktorJson", "ktorWebSockets", "ktorLogging", "ktorContentNegotioation", "ktorResources"]
+ktor = ["ktorCIO", "ktorJson", "ktorWebSockets", "ktorLogging", "ktorContentNegotioation"]
 unitTest = ["androidTestJunit4", "kotlinTest", "kotlinJunitTest"]
 androidTest = ["androidTestJunit4", "androidCompioseUiTestJunit4", "androidTestEspressoCore", "kotlinTest", "kotlinJunitTest"]
