--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,7 +26,9 @@ kotlinX = "1.6.0"
 hilt = "2.50"
 hiltNavigationCompose = "1.1.0"
 
-ksp = "1.9.21-1.0.15"
+ksp = "1.9.21-1.0.16"
+
+coil = "2.5.0"
 
 junitTest = "4.13.2"
 androidTestJUnit4 = "1.1.5"
@@ -56,6 +58,7 @@ composeMaterialIconsExtended = { module = "androidx.compose.material:material-ic
 #lifecycle
 activityCompose = { module = "androidx.activity:activity-compose", version.ref = "activityCompose" }
 lifecycleRuntime = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycleRuntime" }
+lifecycleRuntimeCompose = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "lifecycleRuntime" }
 lifecycleViewModelCompose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleViewModelCompose" }
 
 #androidX
@@ -76,6 +79,9 @@ kotlinXSerialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-j
 hilt = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
 hiltCompiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt" }
 hiltNavigationCompose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
+
+#coil
+coil = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
 
 #unit test
 junitTest = { module = "junit:junit", version.ref = "junitTest" }
